mengubah ukuran form contact

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>
                 
                     <div class="col m7 s12">
-                        <div class="card-panel">
+                        <div class="card-panel1">
                             <h5>Please fill out this form</h5>
                             <div class="input-field">
                                 <input type="text" name="name" id="name" required class="validate">
