--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
                 <div class="row">
                     <h3 class="light center grey-text text-darken-2">Our Services</h3>
                     <div class="col m4 s12 center">
-                        <div class="card-panel center">
+                        <div class="card-panel  panel1 center">
                             <i class="material-icons medium">computer</i>
                             <h5>Web Development</h5>
                             <p>Realible, engaging, and scalable custom web development services to maximize your bussiness outcomes. </p>
                         </div>
                     </div>
                     <div class="col m4 ">
-                        <div class="card-panel center">
+                        <div class="card-panel  panel1 center">
                             <i class="material-icons medium">desktop_windows</i>
                             <h5>Mobile Development</h5>
                             <p>Productive, realible, and engaging mobile solutions to maximize your bussiness outcomes. </p>
                         </div>
                     </div>
                     <div class="col m4 ">
-                        <div class="card-panel center">
+                        <div class="card-panel  panel1 center">
                             <i class="material-icons medium">palette</i>
                             <h5>Web Design</h5>
                             <p>Website designs to elevate your brand through higher conversions, great customer engangment, and measureable result.</p>
@@ -206,7 +206,7 @@
                     </div>
                 
                     <div class="col m7 s12">
-                        <div class="card-panel1">
+                        <div class="card-panel">
                             <h5>Please fill out this form</h5>
                             <div class="input-field">
                                 <input type="text" name="name" id="name" required class="validate">
