menambahkan linked & menghapus client

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#" data-target="mobile-nav" class="sidenav-trigger" ><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a href="#about">About</a></li>
-                            <li><a href="#client">Clients</a></li>
+                            <!-- <li><a href="#client">Clients</a></li> -->
                             <li><a href="#services">Services</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#contact">Contact</a></li>
@@ -38,7 +38,7 @@
         <!--sidenav-->
         <ul class="sidenav" id="mobile-nav">
             <li><a href="#about">About</a></li>
-           <li><a href="#client">Clients</a></li>
+           <!-- <li><a href="#client">Clients</a></li> -->
            <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -64,14 +64,14 @@
            </ul>
        </div> 
 
-       <!--About Us-->
+       <!--About -->
        <section id="about" class="about scrollspy">
            <div class="container">
                <div class="row">
-                   <h3 class="center-align light text-grey text-darken-3">About Us</h3>
+                   <h3 class="center-align light text-grey text-darken-3">About Me</h3>
                    <div class="col m6 light">
-                       <h5>We are Propesional</h5>
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, fugit molestias provident mollitia commodi dolore totam et maxime possimus nulla beatae, nostrum facilis consequuntur dignissimos in fuga vitae sit omnis?</p>
+                       <h5>I am Profesional</h5>
+                       <p>I am a junior devolover with strong passion to learn new things. I am familiar with javascript frameworks, CSS frameworks, and PHP frameworks. Currently I am interested and learn about mobile app. I enjoy reading and travelling on my spare time.  </p>
                    </div>
                    <div class="col m6 light">
                        <p>Web Development</p>
@@ -115,7 +115,7 @@
         <section id="services" class="services grey lighten-3 scrollspy">
             <div class="container">
                 <div class="row">
-                    <h3 class="light center grey-text text-darken-2">Our Services</h3>
+                    <h3 class="light center grey-text text-darken-2">Services</h3>
                     <div class="col m4 s12 center">
                         <div class="card-panel  panel1 center">
                             <i class="material-icons medium">computer</i>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col m4 ">
                         <div class="card-panel  panel1 center">
-                            <i class="material-icons medium">palette</i>
+                            <i class="material-icons medium">devices</i>
                             <h5>Web Design</h5>
                             <p>Website designs to elevate your brand through higher conversions, great customer engangment, and measureable result.</p>
                         </div>
@@ -182,7 +182,7 @@
 
         <section id="contact" class="contact grey lighten-3 scrollspy">
             <div class="container">
-                <h3 class="light  grey-text text-darken-3 center">Contact Us</h3>
+                <h3 class="light  grey-text text-darken-3 center">Contact Me</h3>
                 <div class="row">
                     <div class="col m5 s12">
                         <div class="card-panel blue darken-2 center white-text">
@@ -195,6 +195,10 @@
                             <div class="row">
                                 <div class="col s3"><i class="material-icons tiny">call</i></div>
                                 <div class="col s7"><span class="text-left">0896-3630-8432</span></div>
+                            </div>
+                            <div class="row">
+                                <div class="col s3"><i class="material-icons tiny">link</i></div>
+                                <div class="col s7"><span class="text-left">https://www.linkedin.com/in/adi-rosadi-b3a8b5203/</span></div>
                             </div>
                         </div>
 
