--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div class="container">
                     <div class="nav-wrapper">
                         <a href="#home" class="brand-logo">Adi Rosadi</a>
+                        <!-- <img class="brand-logo" src="gambar/profil.jpg"/> -->
                         <a href="#" data-target="mobile-nav" class="sidenav-trigger" ><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a href="#about">About</a></li>
@@ -44,7 +45,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
 
-       <!--Ini Slider-->
+       <!-- Ini Slider-->
        <div class="slider">
            <ul class="slides">
                <li>
@@ -63,6 +64,25 @@
                 </li>
            </ul>
        </div> 
+       <!-- <div class="container akun1" style="background-image: url('gambar/slider/laptop3.png')" >
+            <div class="row ">
+                <div class="col m4  light">
+                    <img src="gambar/profil.jpg" class="circle responsive-img">
+                </div>
+                <div class="col m6 light left">
+                    <h1 class="user">Adi Rosadi</h1>
+                    <h3 class="lead"> Programmer </h3>
+                    <div class="sosmed d-flex">
+                        <a class="akun" href="https://www.linkedin.com/in/adi-rosadi" >
+                            <img src="gambar/icon/iconmonstr-linkedin-1.svg" />
+                        </a>
+                        <a class="akun" href="https://github.com/adirosadi10" >
+                            <img src="gambar/icon/iconmonstr-github-1.svg" />
+                        </a>    
+                    </div>
+                </div>
+            </div>
+        </div> -->
 
        <!--About -->
        <section id="about" class="about scrollspy">
@@ -198,8 +218,9 @@
                             </div>
                             <div class="row">
                                 <div class="col s3"><i class="material-icons tiny">link</i></div>
-                                <div class="col s7"><span class="text-left">https://www.linkedin.com/in/adi-rosadi-b3a8b5203/</span></div>
+                                <div class="col s7"><span class="text-left">https://www.linkedin.com/in/adi-rosadi/</span></div>
                             </div>
+                            
                         </div>
 
                         <ul class="collection with-header">
@@ -254,8 +275,29 @@
         </section>
 
         <!-- footer -->
-        <footer class="blue darken-2 white-text center">
-            <p class="flow-text">Adi Rosadi, Copyright 2021.</p>
+        <footer class="blue darken-2 white-text ">
+            <!-- <div class="container footer">
+
+                <h1 class="brand-logo">AR</h1>
+            <p class="flow-text center">Adi Rosadi, Copyright 2021.</p>
+            <a class="akun" href="https://www.linkedin.com/in/adi-rosadi" >
+                <img src="gambar/icon/iconmonstr-linkedin-1.svg" />
+            </a>
+            <a class="akun" href="https://github.com/adirosadi10" >
+                <img src="gambar/icon/iconmonstr-github-1.svg" />
+            </a>  
+        </div> -->
+        <div class="footer-copyright">
+            <div class="container">
+            Adi Rosadi, Copyright 2021
+            <a class="grey-text text-lighten-4 right" href="https://www.linkedin.com/in/adi-rosadi">
+                <img src="gambar/icon/iconmonstr-linkedin-1.svg" />
+            </a>
+            <a class="grey-text text-lighten-4 right git" href="https://github.com/adirosadi10">
+                <img src="gambar/icon/iconmonstr-github-1.svg" />
+            </a>
+            </div>
+          </div>
         </footer>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
