mengganti gambar portfolio

--- a/index.html
+++ b/index.html
@@ -168,31 +168,31 @@
                 <h3 class="light center grey-text text-darken-3">Portfolio</h3>
                 <div class="row">
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/company profile.jpeg" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio7.jpeg" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/porfolio 1.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/porfolio1.png" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 2.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio8.png" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 3.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio9.png" class="responsive-img materialboxed">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 4.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio4.png" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 5.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio5.png" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 6.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio2.png" class="responsive-img materialboxed">
                     </div>
                     <div class="col m3 s12">
-                        <img src="gambar/porfolio/portfolio 7.png" class="responsive-img materialboxed">
+                        <img src="gambar/porfolio/portfolio10.jpeg" class="responsive-img materialboxed">
                     </div>
                 </div>
             </div>
